--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.38.0
-pandas==2.1.4
-numpy==1.26.2
-opencv-python-headless==4.8.1.78
+streamlit>=1.38.0,<2.0
+pandas>=2.2.3
+numpy>=1.24.0
+opencv-python-headless>=4.8.0
 Pillow==10.1.0
 easyocr==1.7.1
-torch==2.1.1
+torch>=2.4.0
 torchvision==0.16.1
