--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit>=1.38.0,<2.0
 pandas>=2.2.3
 numpy>=1.24.0
-opencv-python-headless>=4.8.0
+opencv-python-headless==4.10.0.84
 Pillow==10.1.0
 easyocr==1.7.1
 torch>=2.4.0
