--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit>=1.38.0,<2.0
+streamlit>=1.38.0
+openai>=1.0.0
 pandas>=2.2.3
 numpy>=1.24.0
 opencv-python-headless==4.10.0.84
@@ -7,4 +8,3 @@ easyocr==1.7.1
 torch>=2.4.0
 torchvision>=0.19.0
 ultralytics>=8.2.0
-openai>=1.0.0
