--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit>=1.38.0
 openai>=1.0.0
 groq>=0.9.0
+google-generativeai>=0.3.0
 pandas>=2.2.3
 numpy>=1.24.0
 opencv-python-headless==4.10.0.84
